[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotexists"
version = "1.0.0"
description = "Check for the existence of a value in a nested data structure using an exact path."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "PyYAML>=5.0"
]
keywords = ["dict", "nested", "exists", "json", "path", "yaml"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/queelius/dotexists"
Repository = "https://github.com/queelius/dotexists"
Issues = "https://github.com/queelius/dotexists/issues"

[project.scripts]
dotexists = "dotexists.cli:main"

[tool.setuptools]
packages = ["dotexists"]
package_dir = {"" = "dotexists"}
